2017-01-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r210600. rdar://problem/15307582

    2017-01-11  Brent Fulgham  <bfulgham@apple.com>

            Unreviewed build fix after r210599.

            Add missing files.

            * TestWebKitAPI/Tests/mac/CrossPartitionFileSchemeAccess.html: Added.
            * TestWebKitAPI/Tests/mac/CrossPartitionFileSchemeAccess.mm: Added.

2017-01-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r210599. rdar://problem/15307582

    2017-01-11  Brent Fulgham  <bfulgham@apple.com>

            File scheme should not allow access of a resource on a different volume.
            https://bugs.webkit.org/show_bug.cgi?id=158552
            <rdar://problem/15307582>

            Reviewed by Alex Christensen.

            * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Add new files.
            * TestWebKitAPI/Tests/mac/CrossPartitionFileSchemeAccess.html: Added.
            * TestWebKitAPI/Tests/mac/CrossPartitionFileSchemeAccess.mm: Added.

2017-01-12  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r210147. rdar://problem/29675551

    2016-12-23  Simon Fraser  <simon.fraser@apple.com>

            REGRESSION (r209299): Selection is broken when you zoom in webpage using trackpad
            https://bugs.webkit.org/show_bug.cgi?id=166472
            rdar://problem/29675551

            Reviewed by Tim Horton.

            These changes are necessary to allow the mouse to leave the WTR window while
            drag-scrolling, to test autoscroll. Previously, we were never calling -mouseDragged
            (which DRT does); we'd always go through mouseMoved, which hits an early return
            in WebViewImpl::mouseMoved() when the point is outside the view.

            * WebKitTestRunner/mac/EventSenderProxy.mm:
            (WTR::EventSenderProxy::mouseMoveTo):

2017-01-06  Matthew Hanson  <matthew_hanson@apple.com>
