@@ -1,5 +1,16 @@
 2017-01-12  Matthew Hanson  <matthew_hanson@apple.com>
 
+        Merge r210608. rdar://problem/15307582
+
+    2017-01-11  Brent Fulgham  <bfulgham@apple.com>
+
+            Unreviewed test fix after r210599.
+
+            * TestWebKitAPI/Tests/WebKit2/WKPageIsPlayingAudio.cpp:
+            (TestWebKitAPI::TEST): Remove debugging code that was causing a timeout.
+
+2017-01-12  Matthew Hanson  <matthew_hanson@apple.com>
+
         Merge r210600. rdar://problem/15307582
 
     2017-01-11  Brent Fulgham  <bfulgham@apple.com>
